--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #f8e5e5;"> 
+  <body style="background-color: whitesmoke;"> 
+    <script src="https://unpkg.com/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
